--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
+  "parser": "typescript",
+  "trailingComma": "none",
   "singleQuote": true,
-  "trailingComma": "all"
+  "arrowParens": "avoid",
+  "endOfLine": "auto",
+  "printWidth": 90,
+  "tabWidth": 4
 }
